# training-management-system

./: CMakeLists.txt  LICENSE  README.md  adminAuth.h  facultyAuth.h  main.cpp
